apps/navidrome/navidrome-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  type: ClusterIP
  selector:
    app: navidrome
  ports:
    - name: navidrome
      port: 4533
      targetPort: 4533
