apps/navidrome/navidrome-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ext
  labels:
    type: external

spec:
  tls:
    - hosts:
        - navidrome.{hostname}
      secretName: navidrome.ing.cert
  rules:
    - host: navidrome.{hostname}
      http:
        paths:
          - backend:
              service:
                name: navidrome
                port:
                  number: 4533
            path: /
            pathType: Prefix
