apps/navidrome/navidrome-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-local
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    type: local
spec:
  rules:
    - host: navidrome.local
      http:
        paths:
          - backend:
              service:
                name: navidrome
                port:
                  number: 4533
            path: /
            pathType: Prefix
